--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Prakash Shahi</div>
+                <div class="text-2">Manoj Singh</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="https://wa.me/917077011447?text=I'm%20saw%20your%20portfolio%20and%20i%20want%20to%20know%20more%20about%20your%20service">Contact me</a>
             </div>
         </div>
     </section>
@@ -56,7 +56,7 @@
                     <img src="images/profile-1.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Manoj and I'm a <span class="typing-2"></span></div>
                     <p>As a strategic enterprise leader, I am focused on establishing connections between brands and their audiences through brand strategy, empathic leadership and disruption of status quo.<br><br>
 
 I'm a highly effective and pioneering senior marketing executive who has served audiences via digital innovation and cultural stories.<br><br>
@@ -64,7 +64,7 @@ I'm a highly effective and pioneering senior marketing executive who has served 
 I've architected building and accelerating teams in fast-paced, youth centric brands and opinionated communities.<br><br>
 
 I build bridges between art and science to create best-in-class digital and physical marketing plans and brand narrative, with experience building many of the world's premium brands, focused on a direct-to-consumer mindset.</p>
-                    <a href="#">Download CV</a>
+                    <a href="#contact">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -111,79 +111,57 @@ I build identities that speak to your audience, connect them with you, and make 
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>•	Branding of the business<br>
+•	Preparing goals and objectives for the business<br>
+•	 Promoting overall growth of the company<br>
+•	Brand Strategy and positioning<br>
+•	Consumer Experience and Loyalty Marketing<br>
+•	Strategic Communications<br>
+•	Editorial Planning and Creative Development<br>
+•	Innovation and New Product Launches<br>
+•	Digital Product Development<br>
+•	Building Highly Effective Teams<br>
+•	Partnership and Customer Management<br>
+•	Consumer Insight Research<br>
+•	Community Management</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MySQL</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
+                    
 		<div class="bars">
                         <div class="info">
-                            <span>HTML</span>
+                            <span>Business Development</span>
+                            <span>93%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Project Management</span>
+                            <span>95%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Lead Generation</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
+                            <span>CRM</span>
+                            <span>96%</span>
                         </div>
-                        <div class="line css"></div>
+                        <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>List Building</span>
+                            <span>98%</span>
                         </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>MySQL</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
+                        <div class="line html"></div>
                     </div>
                 </div>
             </div>
@@ -200,13 +178,13 @@ I build identities that speak to your audience, connect them with you, and make 
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>Hey user if you found any doubt or any query fell free to ask just fill the form and contact me for any query.We will try to respond your question or query as soon as possible .</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">Manoj Singh</div>
                             </div>
                         </div>
                         <div class="row">
@@ -227,23 +205,23 @@ I build identities that speak to your audience, connect them with you, and make 
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form autocomplete="off">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text"  id="name" placeholder="Name"  required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email"  id="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text"  id="sub"  id="service" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10"  id="msg" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <a href="https://wa.me/917077011447?text=I'm%20saw%20your%20portfolio%20and%20i%20want%20to%20know%20more%20about%20your%20service"><button type=button onClick="parent.location='https://wa.me/917077011447?text=I'm%20saw%20your%20portfolioand%20i%20want%20to%20know%20more%20about%20your%20service'" value='click here to visit home page'>Send message</button></a>
                         </div>
                     </form>
                 </div>
@@ -251,9 +229,30 @@ I build identities that speak to your audience, connect them with you, and make 
         </div>
     </section>
 
+
+
+
+<script>
+function gotowhatsapp() {
+    
+    var name = document.getElementById("name").value;
+    var email = document.getElementById("email").value;
+    var sub = document.getElementById("sub").value;
+    var msg = document.getElementById("msg").value;
+
+    var url = "https://wa.me/917077011447?text=" 
+    + "Name: " + name + "%0a"
+    + "Mail: " + mail + "%0a"
+    + "Subject: " + sub  + "%0a"
+    + "Service: " + msg; 
+
+    window.open(url, '_blank').focus();
+}
+</script>
+
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://instagram.com/brand.snappy/">Brand Snappy</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
