--- a/index.html
+++ b/index.html
@@ -111,19 +111,21 @@ I build identities that speak to your audience, connect them with you, and make 
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>•	Branding of the business<br>
-•	Preparing goals and objectives for the business<br>
-•	 Promoting overall growth of the company<br>
-•	Brand Strategy and positioning<br>
-•	Consumer Experience and Loyalty Marketing<br>
-•	Strategic Communications<br>
-•	Editorial Planning and Creative Development<br>
-•	Innovation and New Product Launches<br>
-•	Digital Product Development<br>
-•	Building Highly Effective Teams<br>
-•	Partnership and Customer Management<br>
-•	Consumer Insight Research<br>
-•	Community Management</p>
+                    <p>• Business Branding<br>
+•Preparing goals and objectives for Brand<br>
+•Promoting overall growth of Brand<br>
+•Brand Strategy and positioning<br>
+•Consumer Experience<br>
+•Loyalty Marketing<br>
+•Strategic Communications<br>
+•Editorial Planning<br>
+•Creative Development<br>
+•Innovation & New Product Launches<br>
+•Digital Product Development<br>
+•Building Highly Effective Teams<br>
+•Partnership & Customer Management<br>
+•Consumer Insight Research<br>
+•Community Management</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -187,20 +189,7 @@ I build identities that speak to your audience, connect them with you, and make 
                                 <div class="sub-title">Manoj Singh</div>
                             </div>
                         </div>
-                        <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-envelope"></i>
-                            <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
                 <div class="column right">
