--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
     </section>
 
     <!-- about section start -->
-    <section class="about" id="about">
+    <section class="about" id="about" style="
+    padding-top: 60px; padding-bottom: 55px;">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title" style="margin-bottom: 45px;">About me</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/profile-1.png" alt="">
@@ -71,7 +72,10 @@ I build bridges between art and science to create best-in-class digital and phys
     </section>
 
     <!-- services section start -->
-    <section class="services" id="services">
+    <section class="services" id="services" style="
+    padding-top: 60px;
+    padding-bottom: 60px;
+">
         <div class="max-width">
             <h2 class="title">My services</h2>
             <div class="serv-content">
@@ -105,7 +109,10 @@ I build identities that speak to your audience, connect them with you, and make 
     </section>
 
     <!-- skills section start -->
-    <section class="skills" id="skills">
+    <section class="skills" id="skills" style="
+    padding-top: 60px;
+    padding-bottom: 60px;
+">
         <div class="max-width">
             <h2 class="title">My skills</h2>
             <div class="skills-content">
@@ -174,7 +181,10 @@ I build identities that speak to your audience, connect them with you, and make 
     
 
     <!-- contact section start -->
-    <section class="contact" id="contact">
+    <section class="contact" id="contact" style="
+    padding-top: 60px;
+    padding-bottom: 60px;
+">
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
