--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ I build identities that speak to your audience, connect them with you, and make 
 •Consumer Insight Research<br>
 •Community Management</p>
                     <a href="#">Read more</a>
-                </div>
+                </div><br><br>
                 <div class="column right">
                     
 		<div class="bars">
