--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <section class="about" id="about" style="
     padding-top: 60px; padding-bottom: 55px;">
         <div class="max-width">
-            <h2 class="title" style="margin-bottom: 45px;">About me</h2>
+            <h2 class="title" style="margin-bottom: 25px;">About me</h2>
             <div class="about-content">
-                <div class="column left">
+                <div class="column left" style="
+    margin-bottom: 10px;">
                     <img src="images/profile-1.png" alt="">
                 </div>
                 <div class="column right">
