--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Manoj Singh</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://wa.me/917077011447?text=I'm%20saw%20your%20portfolio%20and%20i%20want%20to%20know%20more%20about%20your%20service">Contact me</a>
+                <a href="#contact">Contact me</a>
             </div>
         </div>
     </section>
