--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ I build identities that speak to your audience, connect them with you, and make 
 </script>
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://instagram.com/brand.snappy/">Brand Snappy</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Manoj Singh <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
