--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ I build bridges between art and science to create best-in-class digital and phys
                 
                 <div class="card" style="margin-bottom: 15px;">
                    <div class="card" style="margin-bottom: 15px;">
-                    <div class="box">
-                        <i class="fa fa-heartbeat"></i>
-                        <div class="text">Health Care</div>
-                        <p>You deserve the best care in the world. We believe that your health should be a priority. That's why we make it easy for you to find the right doctors, hospitals and care for you and your family.</p>
+                     <div class="box">
+                        <i class="fa fa-book"></i>
+                        <div class="text"> Education</div>
+                        <p>Education is important, but it's not all you need to get ahead in life. We help you learn skills that will help you find a job and advance in your career, whether that's through online courses or one-to-one classes.</p>
                     </div>
                 </div>
                 </div>
