--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ I build bridges between art and science to create best-in-class digital and phys
     </section>
 
     <!-- services section start -->
-    <section class="services" id="services" style="
+   <section class="services" id="services" style="
     padding-top: 60px;
     padding-bottom: 60px;
 ">
@@ -82,26 +82,24 @@ I build bridges between art and science to create best-in-class digital and phys
             <div class="serv-content">
                 
                 <div class="card" style="margin-bottom: 15px;">
-                   <div class="card" style="margin-bottom: 15px;">
-                     <div class="box">
-                        <i class="fa fa-book"></i>
-                        <div class="text"> Education</div>
-                        <p>Education is important, but it's not all you need to get ahead in life. We help you learn skills that will help you find a job and advance in your career, whether that's through online courses or one-to-one classes.</p>
-                    </div>
-                </div>
-                </div>
-                <div class="card" style="margin-bottom: 15px;">
-                   <div class="box">
-                        <i class="fa fa-book"></i>
-                        <div class="text"> Education</div>
-                        <p>Education is important, but it's not all you need to get ahead in life. We help you learn skills that will help you find a job and advance in your career, whether that's through online courses or one-to-one classes.</p>
-                    </div>
-                </div>
-                <div class="card" style="margin-bottom: 15px;">
-                   <div class="box">
+                    <div class="box">
                         <i class="fa fa-home"></i>
                         <div class="text">Real Estate</div>
                         <p>Finding a house is hard. We can help you find the perfect home for your needs, whether it's a one-bedroom apartment in the city or an oceanside mansion. Real estate is our specialty, and we know how to get results fast!</p>
+                    </div>
+                </div>
+                <div class="card" style="margin-bottom: 15px;">
+                    <div class="box">
+                        <i class="fa fa-heartbeat"></i>
+                        <div class="text">Health Care</div>
+                        <p>You deserve the best care in the world. We believe that your health should be a priority. That's why we make it easy for you to find the right doctors, hospitals and care for you and your family.</p>
+                    </div>
+                </div>
+                <div class="card" style="margin-bottom: 15px;">
+                    <div class="box">
+                        <i class="fa fa-book"></i>
+                        <div class="text"> Education</div>
+                        <p>Education is important, but it's not all you need to get ahead in life. We help you learn skills that will help you find a job and advance in your career, whether that's through online courses or one-to-one classes.</p>
                     </div>
                 </div> 
                </div>
