--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         <div class="max-width">
             <h2 class="title" style="margin-bottom: 25px;">About me</h2>
             <div class="about-content">
-                
+                <div class="column left" style="
+    margin-bottom: 10px;">
+                    <img src="images/profile-1.png" alt="">
+                </div>
                 <div class="column right">
                     <div class="text">I'm Manoj and I'm a <span class="typing-2"></span></div>
                     <p>As a strategic enterprise leader, I am focused on establishing connections between brands and their audiences through brand strategy, empathic leadership and disruption of status quo.<br><br>
@@ -240,3 +243,4 @@ I build bridges between art and science to create best-in-class digital and phys
     <script src="script.js"></script>
 </body>
 </html>
+
